--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prettier": "3.4.2"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.7.3"
   },
   "scripts": {
     "prepare": "husky",
@@ -27,5 +27,9 @@
       "eslint --fix",
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "@types/node": "^22.10.7",
+    "ts-jest": "^29.2.5"
   }
 }
