--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,38 @@
 {
-  "compilerOptions": {
-    // Enable latest features
-    "lib": ["ESNext", "DOM"],
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
+	"compilerOptions": {
+	// Module settings
+	"lib": ["ESNext"],
+	"target": "ESNext",
+	"module": "ESNext",
+	"moduleResolution": "bundler",
+	"moduleDetection": "force",
+	"verbatimModuleSyntax": true,
 
-    // Bundler mode
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "noEmit": true,
+	// Type checking
+	"strict": true,
+	"noUnusedLocals": true,
+	"noUnusedParameters": true,
+	"noImplicitReturns": true,
+	"noFallthroughCasesInSwitch": true,
+	"noUncheckedIndexedAccess": true,
+	"noPropertyAccessFromIndexSignature": true,
 
-    // Best practices
-    "strict": true,
-    "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
+	// SDK/Library specific
+	"declaration": true,
+	"declarationMap": true,
+	"sourceMap": true,
+	"outDir": "./dist",
+	"rootDir": "./src",
+	"emitDeclarationOnly": false,
+	"removeComments": false,
 
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  }
+	// Other
+	"skipLibCheck": true,
+	"allowJs": false,
+	"forceConsistentCasingInFileNames": true,
+	"resolveJsonModule": true,
+	"isolatedModules": true
+	},
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "dist", "tests"]
 }
